--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-truncated-text-view",
   "version": "0.1.0",
-  "description": "test",
+  "description": "Effortlessly truncate and expand text in React Native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
