--- a/example/package.json
+++ b/example/package.json
@@ -9,19 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.2.14",
     "@types/react-native": "~0.70.6",
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.9",
-    "typescript": "^4.6.3"
+    "expo": "^49.0.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@expo/webpack-config": "^0.17.2",
+    "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "^19.0.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.1.0"
   },
